[package]
name = "crypto-price-viewer"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
reqwest = { version = "0.11.11", features = ["json"] }
tokio = { version = "1.19.2", features = ["full"] }
clap = { version = "3.2.6", features = ["derive"] }
